--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -30,8 +30,9 @@
                     </div>
                 {% endfor %}
             </div>
+            <br><br><br>
 
-            <div id="previewArea" style="max-height: 400px; overflow-y: auto; margin-top:20px; border:1px solid #ccc; padding:10px;">
+            <div id="previewArea" style="max-height: 400px; overflow-y: auto; border:1px solid #ccc; padding:1%;">
                 <h4>Preview Result</h4>
                 <pre id="previewContent">Click a preview button to load timetable...</pre>
             </div>
