--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -32,6 +32,10 @@
             </div>
             <br><br><br>
 
+            <a href="{{ url_for('extract_all') }}" class="btn btn-danger">
+                Extract & Save All Timetables to Database
+            </a>
+
             <div id="previewArea" style="max-height: 400px; overflow-y: auto; border:1px solid #ccc; padding:1%;">
                 <h4>Preview Result</h4>
                 <pre id="previewContent">Click a preview button to load timetable...</pre>
