--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -54,8 +54,9 @@
         <br>
     </form>
 
-    <h2>Timetable</h2>
 
+    <br><br>
+    <h2>Timetable</h2>
     {% set time_slots = ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
     {% set week_days = ["MON", "TUE", "WED", "THU", "FRI"] %}
 
@@ -74,25 +75,20 @@
                 {% for day in week_days %}
                 <tr>
                     <td><strong>{{ day }}</strong></td>
-                    {% for time in time_slots %}
-                        {% set cell_data = [] %}
-                        {% for row in timetable_data %}
-                            {% if row.classDay == day %}
-                                {% set start_time = row.classTime.split('-')[0] %}
-                                {% set end_time = row.classTime.split('-')[1] %}
-                                {% if time >= start_time and time < end_time %}
-                                    {% set cell_data = cell_data + [row] %}
-                                {% endif %}
-                            {% endif %}
-                        {% endfor %}
-
+                        {% for time in time_slots %}
                         <td>
-                            {% for item in cell_data %}
-                                <div>
-                                    {{ item.lecturerName }}<br>
-                                    {{ item.courseName }}<br>
-                                    {{ item.classRoom }}
-                                </div>
+                            {% for row in timetable_data %}
+                                {% set class_day = row.classDay.upper() %}
+                                {% set class_time = row.classTime %}
+                                {% set start_time = class_time.split('-')[0] %}
+                                {% set end_time = class_time.split('-')[1] %}
+                                {% if class_day == day and time >= start_time and time < end_time %}
+                                    <div style="border: 1px solid #999; margin: 2px; padding: 2px;">
+                                        <strong>{{ row.lecturerName }}</strong><br>
+                                        {{ row.courseName }}<br>
+                                        Room: {{ row.classRoom }}
+                                    </div>
+                                {% endif %}
                             {% endfor %}
                         </td>
                     {% endfor %}
@@ -101,10 +97,6 @@
             </tbody>
         </table>
     </div>
-
-
-
-
 </div>
 
 
