--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -77,17 +77,22 @@
                     <td><strong>{{ day }}</strong></td>
                         {% for time in time_slots %}
                         <td>
+                            {% set seen = [] %}
                             {% for row in timetable_data %}
                                 {% set class_day = row.classDay.upper() %}
                                 {% set class_time = row.classTime %}
                                 {% set start_time = class_time.split('-')[0] %}
                                 {% set end_time = class_time.split('-')[1] %}
                                 {% if class_day == day and time >= start_time and time < end_time %}
-                                    <div style="border: 1px solid #999; margin: 2px; padding: 2px;">
-                                        <strong>{{ row.lecturerName }}</strong><br>
-                                        {{ row.courseName }}<br>
-                                        Room: {{ row.classRoom }}
-                                    </div>
+                                    {% set key = row.lecturerName ~ "|" ~ row.courseName ~ "|" ~ row.classRoom ~ "|" ~ start_time ~ "-" ~ end_time %}
+                                    {% if key not in seen %}
+                                        {% do seen.append(key) %}
+                                        <div style="border: 1px solid #999; margin: 2px; padding: 2px;">
+                                            <strong>{{ row.lecturerName }}</strong><br>
+                                            {{ row.courseName }}<br>
+                                            Room: {{ row.classRoom }}
+                                        </div>
+                                    {% endif %}
                                 {% endif %}
                             {% endfor %}
                         </td>
