--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -54,8 +54,7 @@
                     <input type="text" name="departmentName" value="{{ departmentName_text }}" required>
                 </div>
 
-                <div class="form-middle">
-
+                <div class="form-right">
                     <label>Hop Name</label>
                     <select id="hopName" name="hopName" onchange="updateEmail('hopName','hopEmail')">
                         <option value="" disabled selected>Select a Hop</option>
@@ -66,11 +65,7 @@
                         {% endfor %}
                     </select><br>
 
-                    <label>Hop Email</label>
-                    <input type="email" id="hopEmail" name="hopEmail" readonly>
-                </div>
-
-                <div class="form-right">
+                    
                     <label>Dean Name</label>
                     <select id="deanName" name="deanName" onchange="updateEmail('deanName','deanEmail')">
                         <option value="" disabled selected>Select a Dean</option>
@@ -79,10 +74,7 @@
                                 [{{ dean.userId }}] {{ dean.userName }} 
                             </option>
                         {% endfor %}
-                    </select><br>
-
-                    <label>Dean Email</label>
-                    <input type="email" id="deanEmail" name="deanEmail" readonly>
+                    </select>
                 </div>
             </div>
 
