--- a/app/templates/admin/adminProfile.html
+++ b/app/templates/admin/adminProfile.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="menu-section">
     <h2>Profile</h2>
-    <form method="post">
-        <div>
+    <form method="post" style="border-radius: None; border: None; box-shadow: None;">
+        <div class="profile-frame">
             <div class="form-left">
                 <label>Full Name as per IC</label>
                 <input type="text" name="username" value="{{ admin_name }}" readonly><br>
